# rules_graphql

./: .bazelignore  .bazelrc  .gitignore  .yamlfmt.yaml  BUILD  LICENSE  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
.aspect/cli/: config.yaml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh  semantic-pull-request.yaml  tag.yaml
docs/: BUILD  BUILD.bazel  MODULE.bazel  graphql_bundle.md  graphql_info.md  graphql_library.md
e2e/aliases/: WORKSPACE
e2e/aliases/src/: BUILD  Bar.graphql  Foo.graphql  Query.graphql
e2e/bzlmod/: .bazelrc  MODULE.bazel
e2e/bzlmod/src/: BUILD  PublicUser.graphql  Query.graphql
e2e/bzlmod/src/__goldens__/: bundle.graphql
e2e/typical_usage/: MODULE.bazel  WORKSPACE
e2e/typical_usage/src/: BUILD  Bar.graphql  Baz.graphql  Foo.graphql  Mutation.graphql  Query.graphql  README.md
e2e/yoga_server/: .bazelignore  .bazeliskrc  .bazelrc  .npmrc  BUILD  MODULE.bazel  package.json  pnpm-lock.yaml  tsconfig.json
e2e/yoga_server/src/schema/: BUILD  CurrentUser.graphql
e2e/yoga_server/src/server/: BUILD  main.ts
examples/graphql_bundle/: BUILD
examples/graphql_library/api/: BUILD  Query.graphql
examples/graphql_library/users/: BUILD
examples/import_aliases/api/: BUILD  Query.graphql
examples/import_aliases/users/: BUILD
graphql/: BUILD  defs.bzl  providers.bzl
graphql/private/: BUILD  graphql_bundle.bzl  graphql_info.bzl  graphql_library.bzl
tools/: BUILD  repin  tools.lock.json
tools/format/: BUILD
