bazel_dep(name = "aspect_bazel_lib", version = "2.19.2")
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "rules_graphql", version = "0.0.0")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "stardoc", version = "0.7.2", repo_name = "io_bazel_stardoc")

local_path_override(
    module_name = "rules_graphql",
    path = "..",
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "stardoc-prebuilt",
    integrity = "sha256-jDi5ITmziwwiHCsfd8v0UOoraWXIAfICIll+wbpg/vE=",
    # NB: version matches the stardoc load above
    urls = ["https://github.com/alexeagle/stardoc-prebuilt/releases/download/v0.6.2/renderer_deploy.jar"],
)
