bazel_dep(name = "rules_graphql", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "rules_nodejs", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "2.4.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_ts", version = "3.6.3", dev_dependency = True)

local_path_override(
    module_name = "rules_graphql",
    path = "../..",
)

# npm package manager
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# Ensure a fixed version of node for consistency.
node = use_extension(
    "@rules_nodejs//nodejs:extensions.bzl",
    "node",
)
node.toolchain(node_version = "20.18.0")
use_repo(node, "nodejs_toolchains")
